...
                    bio = "Connecting & empowering Chitral. The official verified profile of Hamara Yarkhoon 🏔️✨. Follow us to configure and secure local networks.",
                    friendStatus = "FRIENDS",
                    isCurrentUser = false,
                    isProfileCompleted = true,
                    isOnline = true,
                    email = "yarkhoon@yarkhoon.com",
                    password = "password123",
                    isVerified = true
                ),
                User(
                    id = "user_ali",
                    username = "alikhan99",
                    fullName = "Ali Khan",
...
